force-app/main/default/objects/Item_Action__c/Item_Action__c.object-meta.xml
<CustomObject>
    <description>The intake or outtake of an item</description>
    <label>Item Action</label>
    <nameField>
        <displayFormat>IA-{0000000}</displayFormat>
        <label>Item Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>