force-app/main/default/objects/Item_Action__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count/Cantidad</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>