force-app/main/default/objects/Item_Action__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Item Actions</relationshipLabel>
    <relationshipName>Item_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>