force-app/main/default/objects/Item_Action__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which user performed this action?</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Item_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>