force-app/main/default/objects/Item_Action__c/validationRules/Inventory_Cannot_Be_Less_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory_Cannot_Be_Less_Than_Zero</fullName>
    <active>false</active>
    <errorConditionFormula>Count__c &lt; 0</errorConditionFormula>
    <errorMessage>Inventory count cannot be less than zero.</errorMessage>
</ValidationRule>