force-app/main/default/objects/Item_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Item__c</columns>
    <columns>Location__c</columns>
    <columns>User__c</columns>
    <columns>Count__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>